Closed
Bug 1154227
Opened 10 years ago
Closed 10 years ago
[CSS3] With writing-mode: vertical-rl, text-shadow is only applied to part of the text block
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla40
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: kristin.merrigan, Assigned: jfkthame)
References
(Blocks 1 open bug)
Details
(Keywords: css3, testcase, Whiteboard: [gfx-noted])
Attachments
(2 files)
|
1.06 KB,
text/html
|
Details | |
|
3.76 KB,
patch
|
smontagu
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2272.118 Safari/537.36
Steps to reproduce:
used following html to apply a text shadow with blur effect for vertical text (using the developer version 39.0a2 (2015-04-13) which supports css styles writing-mode: vertical-rl style)
<!DOCTYPE html>
<html>
<head>
<style>
h1 {
text-shadow: 0px 0px 2px #FF0000;
writing-mode: vertical-rl;
text-orientation: upright;
}
</style>
</head>
<body>
<h1>Text-shadow effect</h1>
</body>
</html>
Actual results:
it blurs slightly around the first character then gets cut off, and no other characters have the effect applied.
Expected results:
It should apply the blur effect to all characters
Comment 1•10 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:40.0) Gecko/20100101 Firefox/40.0
Build ID: 20150413030203
I could reproduce the issue without text-orientation: upright.
HWA on or off made no difference.
Neither did opening the tab in a non-e10s window.
Status: UNCONFIRMED → NEW
Component: Untriaged → Graphics
Ever confirmed: true
Product: Firefox → Core
Summary: css style text-shadow with blur effect does not work properly when used on vertical text (using the developer version) → [CSS3] With writing-mode: vertical-rl, text-shadow is only applied to part of the text block
Version: unspecified → 39 Branch
| Assignee | ||
Comment 2•10 years ago
|
||
Part of the problem, at least, is that we don't convert the bounding box from textrun-relative to physical coordinates in nsTextFrame::PaintShadows.
Blocks: writing-mode
| Assignee | ||
Updated•10 years ago
|
Blocks: enable-writing-mode-release
| Assignee | ||
Comment 3•10 years ago
|
||
Here's a more extensive testcase with combinations of writing-mode and text-orientation.
| Assignee | ||
Comment 4•10 years ago
|
||
And with this patch, all the shadows in the testcase render properly in vertical mode.
Attachment #8595309 -
Flags: review?(smontagu)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Updated•10 years ago
|
Attachment #8595309 -
Flags: review?(smontagu) → review+
| Assignee | ||
Comment 5•10 years ago
|
||
Comment 6•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment 7•9 years ago
|
||
Interactive DHTML text-shadow and writing-mode test, testing 'text-shadow' property with all combinations of 'text-orientation' values and of 'writing-mode' values
http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s76-text-shadow-dhtml.xht
You need to log in
before you can comment on or make changes to this bug.
Description
•