Bug 1154227 - Fix the painting of text-shadow in vertical writing modes. r=smontagu